Partial fix for SVG overflow

--- a/WebUI/SPA/Components/Pages/AnalysisPage/FactorsView/factors-view.component.css
+++ b/WebUI/SPA/Components/Pages/AnalysisPage/FactorsView/factors-view.component.css
@@ -55,7 +55,7 @@
     width: calc(100% - 10px);
     padding-left:5px;
     height: calc(100% - 30px);
-    overflow: hidden;
+    overflow: visible;
     float:left;
     margin-top:-20px;
 }
